--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/Style.css" />
-  <link rel="stylesheet" href="./src/mobile-style.css">
+  <link rel="stylesheet" href="Style.css" />
+  <link rel="stylesheet" href="mobile-style.css">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
           </button>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          <img src="assets/header-img.png" alt="Book" />
+          <img src="header-img.png" alt="Book" />
         </div>
       </div>
     </div>
@@ -338,7 +338,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="./src/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
