--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <p>
             Logo Design, Brochure Design, Book Layout, Book Framing, Book Cover etc.
           </p>
-          <button class="btn btn-light px-5 py-2 primary-btn">
+           <a href="tel:9818640149"><button class="btn btn-light px-5 py-2 primary-btn">
             Buy Now 2999
-          </button>
+          </button></a>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
           <img src="header-img.png" alt="Book" />
