--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </section>
     <section class="section-2 container-fluid p-0">
-      <div class="cover">
+<!--       <div class="cover">
         <div class="overlay"></div>
         <div class="content text-center">
           <h1>Some Features That Made Us Unique</h1>
@@ -99,7 +99,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
           </p>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="container-fluid text-center">
         <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
           <div class="rect">
