--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                   <h5 class="card-title">PDF</h5>
                 </div>
                 <p class="card-text">
-                  With supporting text below as a natural lead-in.
+                  Include content writting with designing of formats.
                 </p>
                 <div class="pricing">
-                  <h1>$77.99</h1>
+                  <h1>₹200</h1>
                   <a href="tel:9818640149" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
                 </div>
               </div>
@@ -149,10 +149,10 @@
                   <h5 class="card-title">E-book</h5>
                 </div>
                 <p class="card-text">
-                  With supporting text below as a natural lead-in.
+                   Include content writting with designing of formats & desining in XML HTML CSS.
                 </p>
                 <div class="pricing">
-                  <h1>$99.99</h1>
+                  <h1>₹400</h1>
                   <a href="tel:9818640149" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
                 </div>
               </div>
@@ -163,10 +163,10 @@
                   <h5 class="card-title">Print Copy</h5>
                 </div>
                 <p class="card-text">
-                  With supporting text below as a natural lead-in.
+                  Include entire print copy along with book layout format book cover front % back etc.
                 </p>
                 <div class="pricing">
-                  <h1>$58.99</h1>
+                  <h1>₹700</h1>
                   <a href="tel:9818640149" class="btn btn-dark px-5 py-2 primary-btn mb-5">Purchase Now</a>
                 </div>
               </div>
