--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <h5 class="card-title">Print Copy</h5>
                 </div>
                 <p class="card-text">
-                  Include entire print copy along with book layout format book cover front % back etc.
+                  Include entire print copy along with book layout format book cover front & back etc.
                 </p>
                 <div class="pricing">
                   <h1>₹700</h1>
